--- a/Templates/Generators/Class_cpp.tt
+++ b/Templates/Generators/Class_cpp.tt
@@ -9,6 +9,7 @@
 <#@ parameter name="objectpath" type="System.String" #>
 <#@ parameter name="basename" type="System.String" #>
 <#@ parameter name="typename" type="System.String" #>
+<#@ parameter name="hasConstructor" type="System.Boolean" #>
 #include "<#= this.modulename #>PrivatePCH.h"
 #include "<#= this.objectpath #><#= this.objectname #>.h"
 
@@ -16,7 +17,8 @@
 
 
 
-<#= this.typename #><#= this.objectname #>::<#= this.typename #><#= this.objectname #>(const FObjectInitializer& ObjectInitializer)
+<# if(hasConstructor) { #><#= this.typename #><#= this.objectname #>::<#= this.typename #><#= this.objectname #>(const FObjectInitializer& ObjectInitializer)
 	: Super(ObjectInitializer)
 {
 }
+<# } #>
