switch to netstandard, added more template parameters.

--- a/Templates/Source/GameInstance_cpp.tt
+++ b/Templates/Source/GameInstance_cpp.tt
@@ -5,15 +5,17 @@
 <#@ import namespace="System.Collections.Generic" #>
 <#@ output extension=".cs" #>
 <#@ parameter name="modulename" type="System.String" #>
+<#@ parameter name="hasFinalHeader" type="System.Boolean" #>
+<#@ parameter name="hasLocTextNamespace" type="System.Boolean" #>
+<#@ parameter name="locTextNamespaceName" type="System.String" #>
 #include "<#= this.modulename #>PrivatePCH.h"
 #include "<#= this.modulename #>GameInstance.h"
 
-#include "<#= this.modulename #>.final.h"
+<# if (hasFinalHeader) { #>#include "<#= this.modulename #>.final.h"
+<# } #>
 
-
-
-#define LOCTEXT_NAMESPACE "<#= this.modulename #>"
-
+<# if (hasLocTextNamespace) { #>#define LOCTEXT_NAMESPACE "<#= this.locTextNamespaceName ?? this.modulename #>"
+<# } #>
 
 
 U<#= this.modulename #>GameInstance::U<#= this.modulename #>GameInstance()
@@ -42,5 +44,5 @@ void U<#= this.modulename #>GameInstance::Tick(float DeltaSeconds)
 }
 
 
-
-#undef LOCTEXT_NAMESPACE
+<# if (hasLocTextNamespace) { #>#undef LOCTEXT_NAMESPACE
+<# } #>
