--- a/Templates/Generators/Class_cpp.tt
+++ b/Templates/Generators/Class_cpp.tt
@@ -10,15 +10,25 @@
 <#@ parameter name="basename" type="System.String" #>
 <#@ parameter name="typename" type="System.String" #>
 <#@ parameter name="hasConstructor" type="System.Boolean" #>
+<#@ parameter name="hasFinalHeader" type="System.Boolean" #>
+<#@ parameter name="hasLocTextNamespace" type="System.Boolean" #>
+<#@ parameter name="locTextNamespaceName" type="System.String" #>
 #include "<#= this.modulename #>PrivatePCH.h"
 #include "<#= this.objectpath #><#= this.objectname #>.h"
 
-#include "<#= this.modulename #>.final.h"
+<# if (hasFinalHeader) { #>#include "<#= this.modulename #>.final.h"
+<# } #>
+
+<# if (hasLocTextNamespace) { #>#define LOCTEXT_NAMESPACE "<#= this.locTextNamespaceName ?? this.modulename #>"
+<# } #>
 
 
-
-<# if(hasConstructor) { #><#= this.typename #><#= this.objectname #>::<#= this.typename #><#= this.objectname #>(const FObjectInitializer& ObjectInitializer)
+<# if (hasConstructor) { #><#= this.typename #><#= this.objectname #>::<#= this.typename #><#= this.objectname #>(const FObjectInitializer& ObjectInitializer)
 	: Super(ObjectInitializer)
 {
 }
+<# } #>
+
+
+<# if (hasLocTextNamespace) { #>#undef LOCTEXT_NAMESPACE
 <# } #>
