--- a/Templates/Generators/SimpleClass_cpp.tt
+++ b/Templates/Generators/SimpleClass_cpp.tt
@@ -9,9 +9,20 @@
 <#@ parameter name="objectpath" type="System.String" #>
 <#@ parameter name="basename" type="System.String" #>
 <#@ parameter name="typename" type="System.String" #>
+<#@ parameter name="hasFinalHeader" type="System.Boolean" #>
+<#@ parameter name="hasLocTextNamespace" type="System.Boolean" #>
+<#@ parameter name="locTextNamespaceName" type="System.String" #>
 #include "<#= this.modulename #>PrivatePCH.h"
 #include "<#= this.objectpath #><#= this.objectname #>.h"
 
-#include "<#= this.modulename #>.final.h"
+<# if (hasFinalHeader) { #>#include "<#= this.modulename #>.final.h"
+<# } #>
+
+<# if (hasLocTextNamespace) { #>#define LOCTEXT_NAMESPACE "<#= this.locTextNamespaceName ?? this.modulename #>"
+<# } #>
 
 
+
+
+<# if (hasLocTextNamespace) { #>#undef LOCTEXT_NAMESPACE
+<# } #>
