--- a/Templates/Generators/Class_h.tt
+++ b/Templates/Generators/Class_h.tt
@@ -3,28 +3,17 @@
 <#@ import namespace="System.Linq" #>
 <#@ import namespace="System.Text" #>
 <#@ import namespace="System.Collections.Generic" #>
-<#@ output extension=".cs" #>
-<#@ parameter name="modulename" type="System.String" #>
-<#@ parameter name="objectname" type="System.String" #>
-<#@ parameter name="objectpath" type="System.String" #>
-<#@ parameter name="extraincludes" type="System.Collections.Generic.List<System.String>" #>
-<#@ parameter name="basename" type="System.String" #>
-<#@ parameter name="typename" type="System.String" #>
+<#@ parameter name="moduleName" type="System.String" #>
+<#@ parameter name="typePrefix" type="System.String" #>
+<#@ parameter name="typeName" type="System.String" #>
+<#@ parameter name="baseName" type="System.String" #>
 <#@ parameter name="hasConstructor" type="System.Boolean" #>
-#pragma once
-
-<# foreach (string include in this.extraincludes) { #>#include "<#= include #>"
-<# }#>
-#include "<#= this.objectname #>.generated.h"
-
-
-
 UCLASS()
-class <#= this.modulename.ToUpper() #>_API <#= this.typename #><#= this.objectname #> : public <#= this.basename #>
+class <#= this.moduleName.ToUpper() #>_API <#= this.typePrefix #><#= this.typeName #> : public <#= this.baseName #>
 {
 	GENERATED_BODY()
 
 
 public:
-	<# if(hasConstructor) { #><#= this.typename #><#= this.objectname #>(const FObjectInitializer& ObjectInitializer);
+	<# if(hasConstructor) { #><#= this.typePrefix #><#= this.typeName #>(const FObjectInitializer& ObjectInitializer);
 <# } #>};
