--- a/Templates/Source/Module_h.tt
+++ b/Templates/Source/Module_h.tt
@@ -8,8 +8,8 @@
 <#@ parameter name="isprimary" type="System.Boolean" #>
 #pragma once
 
-#include "Engine.h"
-#include "ModuleManager.h"
+#include "Modules/ModuleInterface.h"
+#include "Modules/ModuleManager.h"
 
 
 
